# rust-grabbag

./: .gitignore  .travis.yml  CHANGES.md  Cargo.toml  LICENSE  Project.sublime-project  README.md  update-docs.py
doc/: search-index.js
doc/grabbag/: index.html  sidebar-items.js  stability.html  stability.json
doc/grabbag/iter/: index.html  sidebar-items.js  trait.AccumulateIterator.html  trait.CartesianProductIterator.html  trait.CloneEachIterator.html  trait.FoldlIterator.html  trait.FoldrIterator.html  trait.GroupByIterator.html  trait.IndexedIterator.html  trait.IntersperseIterator.html  trait.KeepSomeIterator.html  trait.PacingWalkIterator.html  trait.PadTailToIterator.html  trait.RoundRobinIterator.html  trait.SkipExactlyIterator.html  trait.SortedIterator.html  trait.StrideIterator.html  trait.TakeExactlyIterator.html  trait.TeeIterator.html  trait.ZipLongestIterator.html
doc/grabbag/iter/accumulate/: index.html  sidebar-items.js  struct.Accumulate.html  trait.AccumulateIterator.html
doc/grabbag/iter/cartesian_product/: index.html  sidebar-items.js  struct.CartesianProduct.html  trait.CartesianProductIterator.html
doc/grabbag/iter/clone_each/: index.html  sidebar-items.js  struct.CloneEach.html  trait.CloneEachIterator.html
doc/grabbag/iter/fold/: index.html  sidebar-items.js  trait.FoldlIterator.html  trait.FoldrIterator.html
doc/grabbag/iter/group_by/: index.html  sidebar-items.js  struct.Group.html  struct.GroupBy.html  struct.GroupByShared.html  trait.GroupByIterator.html
doc/grabbag/iter/indexed/: index.html  struct.Indexed.html  struct.IndexedView.html  trait.IndexedIterator.html
doc/grabbag/iter/intersperse/: index.html  sidebar-items.js  struct.Intersperse.html  trait.IntersperseIterator.html
doc/grabbag/iter/keep_some/: index.html  sidebar-items.js  struct.KeepSome.html  trait.KeepSomeIterator.html
doc/grabbag/iter/pacing_walk/: index.html  struct.PacingWalk.html  trait.PacingWalkIterator.html
doc/grabbag/iter/pad_tail_to/: index.html  sidebar-items.js  struct.PadTailTo.html  trait.PadTailToIterator.html
doc/grabbag/iter/prelude/: index.html
doc/grabbag_macros/: index.html  macro.collect!.html  macro.count_exprs!.html  macro.recurrence!.html  macro.sequence!.html  sidebar-items.js  stability.html  stability.json
doc/src/grabbag/: lib.rs.html
doc/src/grabbag_macros/: lib.rs.html
grabbag_macros/: CHANGES.md  Cargo.toml  build.rs
grabbag_macros/src/: lib.rs
grabbag_macros/tests/: collect.rs  count_exprs.rs  sequence_recurrence.rs
src/: iter.rs  lib.rs
src/iter/: accumulate.rs  cartesian_product.rs  clone_each.rs  fold.rs  group_by.rs  indexed.rs  intersperse.rs  keep_some.rs  mod.rs  pacing_walk.rs  pad_tail_to.rs  round_robin.rs  skip_exactly.rs  sorted.rs  stride.rs  take_exactly.rs  tee.rs  zip_longest.rs
(+52 files in other folders)
