[package]

name = "grabbag"
version = "0.1.1"
authors = ["Daniel Keep <daniel.keep@gmail.com>"]

description = "A random grab-bag of functionality."
repository = "https://github.com/DanielKeep/rust-grabbag"
documentation = "https://danielkeep.github.io/rust-grabbag/doc/grabbag/index.html"
license = "MIT"

exclude = [
    "Project.sublime-project",
    "update-docs.py",
]

[dependencies.grabbag_macros]

version = "0.1.0"
path = "grabbag_macros"
