[package]

name = "grabbag"
version = "0.1.3"
authors = ["Daniel Keep <daniel.keep@gmail.com>"]

description = "A random grab-bag of functionality."
repository = "https://github.com/DanielKeep/rust-grabbag"
documentation = "https://danielkeep.github.io/rust-grabbag/doc/grabbag/index.html"
license = "MIT/Apache-2.0"

exclude = [
    "Project.sublime-project",
    "update-docs.py",
    "scripts/*",
    ".travis.yml",
]

[dependencies.grabbag_macros]

version = "0.1.0"
path = "grabbag_macros"
