[package]

name = "grabbag_macros"
version = "0.1.1"
authors = ["Daniel Keep <daniel.keep@gmail.com>"]

description = "A random grab-bag of functionality. (macro package)"
repository = "https://github.com/DanielKeep/rust-grabbag"
documentation = "https://danielkeep.github.io/rust-grabbag/doc/grabbag_macros/index.html"
license = "MIT"

[lib]

name = "grabbag_macros"
plugin = true
